--- a/index.html
+++ b/index.html
@@ -54,8 +54,21 @@
                      src="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg"
                      alt="Picture of me">
                 <div class="introTextContainer">
-                    <h1 class="introHeader">Hello, my name is Omorian</h1>
-                    <h3 class="introSubHeader">I am a game development student and music producer/sound designer from the Netherlands</h3>
+                    <h1 class="container introHeader">Hello, my name is Omorian</h1>
+                    <h3 class="introSubHeader">I am a game development student from the Netherlands <br>with a passion for programming and sound design/music production.</h3>
+                    <a class="button aboutMeButton" href="/pages/AboutMePage.html">
+                        <span class="abmt">Learn more about me</span>
+                        <span class="material-icons">
+                            double_arrow
+                        </span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="container projectsContainer">
+                <h1>Projects</h1>
+                <div class="progProject">
+                    
                 </div>
             </div>
         </div>
