Started working on projects carousel

--- a/index.html
+++ b/index.html
@@ -66,9 +66,31 @@
             </div>
 
             <div class="container projectsContainer">
-                <h1>Projects</h1>
-                <div class="progProject">
-                    
+                <h1>Programming Projects</h1>
+                <div class="progProjects">
+                    <div class="projectCarousel">
+                        <a class="prog project1" href="https://shreddexz.itch.io/time-to-die">
+                            <img src="https://cdn.discordapp.com/attachments/973888571339575347/992532642014707762/TTD_Img2.png"
+                                 alt="Cover art for the game 'Time to die'"> 
+                            <span class="itemDesc TTD_T"> 
+                                <p>
+                                An endless shooter with audio visualization
+                                </p>
+                                <p class="material-icons">
+                                arrow_outward
+                                </p>
+                            </span>
+                        </a>
+                        <div class="carousel-actions">
+                            <button id="carousel-button-prev" aria-label="Previous"><</button>
+                            <button id="carousel-button-next" aria-label="Next">></button>
+                        </div>
+                        <div class="carousel-dots">
+                            <input class="dot selected-dot" type="radio" name="dot" checked />
+                            <input class="dot" type="radio" name="dot" />
+                            <input class="dot" type="radio" name="dot" />
+                        </div>
+                    </div> 
                 </div>
             </div>
         </div>
