--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+< DOCTYPE html>
 <html lang="en">
 <meta property="og:title" content="Omorian Clifford's Portfolio" />
 <meta property="og:type" content="website" />
