Images are now local

--- a/pages/AboutMePage.html
+++ b/pages/AboutMePage.html
@@ -3,13 +3,11 @@
 <meta property="og:title" content="Omorian Clifford's Portfolio" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.omorianclifford.com/pages/AboutMePage" />
-<meta property="og:image"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+<meta property="og:image" src="/Images/portfolio_selfie.jpg" />
 <meta property="og:description"
     content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
 <meta name="theme-color" content="#00a2ff">
-<meta name="twitter:card"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
 
 <head>
     <meta charset="UTF-8">
@@ -51,9 +49,7 @@
     <div class="aboutmecontainer">
         <div class="imagecontainer" id="imgcontainer">
             <a tabindex="0" class="imgparent">
-                <img class="Selfie"
-                    src="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg"
-                    alt="Picture of me">
+                <img class="Selfie" src="/Images/portfolio_selfie.jpg" alt="Picture of me">
                 <a class="click">(click to enlarge)</a>
             </a>
         </div>
