--- a/pages/ContactPage.html
+++ b/pages/ContactPage.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta property="og:title" content="Omorian Clifford's Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omorianclifford.com/pages/ContactPage" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#00a2ff">
-    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta property="og:title" content="Omorian Clifford's Portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.omorianclifford.com/pages/ContactPage" />
+<meta property="og:image" src="/Images/portfolio_selfie.jpg" />
+<meta property="og:description"
+    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+<meta name="theme-color" content="#00a2ff">
+<meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,19 +49,16 @@
         <div class="CIHeader">
             <a>Contact Information</a>
         </div>
-        <img class="CI-Image"
-        src="https://cdn.discordapp.com/attachments/973888571339575347/973892156970401912/CIScreen.png" alt="">
+        <img class="CI-Image" src="/Images/CIScreen.png" alt="">
     </div>
 
     <!-- replace below with badge? -->
-    <p> 
+    <p>
         <a class="linkedinText" href="https://www.linkedin.com/in/omorianclifford/">My Linkedin</a>
         <a href="https://www.linkedin.com/in/omorianclifford/">
-            <img class="linkedin"
-                src="https://cdn.discordapp.com/attachments/973888571339575347/975684567648333835/LI-In-Bug.png"
-                alt="My Linkedin">
+            <img class="linkedin" src="/Images/LI-In-Bug.png" alt="My Linkedin">
         </a>
-    </p>        
+    </p>
 
     <iframe src="/pages/Files/Omorian Clifford - Game Development CV 2023.pdf" frameborder="0" class="CV"></iframe>
 </body>
