--- a/pages/ProjectsPage.html
+++ b/pages/ProjectsPage.html
@@ -3,13 +3,11 @@
 <meta property="og:title" content="Omorian Clifford's Portfolio" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.omorianclifford.com/pages/ProjectsPage">
-<meta property="og:image"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
+<meta property="og:image" src="/Images/portfolio_selfie.jpg" />
 <meta property="og:description"
     content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
 <meta name="theme-color" content="#00a2ff">
-<meta name="twitter:card"
-    content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
+<meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
 
 <head>
     <meta charset="UTF-8">
@@ -71,9 +69,7 @@
         </a>
         <div class="GameOne">
             <p><a class="TUE" href="#Popup1">
-                    <img class="TUEImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/978268615386234880/unknown.png"
-                        alt="The Unseeing Eye Art">
+                    <img class="TUEImg" src="/Images/tue.png" alt="The Unseeing Eye Art">
                     <div class="TUEOverlay">A horror game in which you "see" with sound <br>(Unity) [GGJ 2022]</div>
                 </a></p>
         </div>
@@ -93,9 +89,7 @@
 
         <div class="GameTwo">
             <p><a class="TD" href="#Popup2">
-                    <img class="TDImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/976425298016993280/unknown.png"
-                        alt="Tower Defense Screenshot">
+                    <img class="TDImg" src="/Images/td.png" alt="Tower Defense Screenshot">
                     <div class="TDOverlay">A tower defense game in which you defend a computer against human
                         viruses<br>(Unity)</div>
                 </a></p>
@@ -115,9 +109,7 @@
 
         <div class="GameThree">
             <p><a class="IRT" href="#Popup3">
-                    <img class="IRTImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/976745952620716053/unknown.png"
-                        alt="I Remember This Art">
+                    <img class="IRTImg" src="/Images/irt.png" alt="I Remember This Art">
                     <div class="IRTOverlay">A horror game in which you wake up in a crashed car, and have to figure out
                         what happened<br>(Unity) [GGJ 2021]</div>
                 </a></p>
@@ -138,9 +130,7 @@
 
         <div class="GameFour">
             <p><a class="QOTH" href="#Popup4">
-                    <img class="QOTHImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/976744859899658250/unknown.png"
-                        alt="Queen of the hill Art">
+                    <img class="QOTHImg" src="/Images/qoth.png" alt="Queen of the hill Art">
                     <div class="QOTHOverlay">A tower/base defense game in which you have to defend your
                         ant-hill<br>(Unity/web)
                         [GGJ 2020]</div>
@@ -161,9 +151,7 @@
 
         <div class="GameFive">
             <p><a class="TLS" href="#Popup5">
-                    <img class="TLSImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/992350249614053467/unknown.png"
-                        alt="The Last Scientist Art">
+                    <img class="TLSImg" src="/Images/tls.png" alt="The Last Scientist Art">
                     <div class="TLSOverlay">A text based adventure game in which you wake up in a dark room, and have to
                         figure out what happened<br>(C# console)
                     </div>
@@ -184,9 +172,7 @@
 
         <div class="GameSix">
             <p><a class="TTD" href="#Popup6">
-                    <img class="TTDImg"
-                        src="https://cdn.discordapp.com/attachments/973888571339575347/992532642014707762/TTD_Img2.png"
-                        alt="Time to die Art">
+                    <img class="TTDImg" src="/Images/TTD_Img2.png" alt="Time to die Art">
                     <div class="TTDOverlay">an endless shooter with audio visualization<br>(Unreal Engine)
                     </div>
                 </a></p>
