--- a/pages/MusicPage.html
+++ b/pages/MusicPage.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta property="og:title" content="Omorian Clifford's Portfolio" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omorianclifford.com/pages/MusicPage" />
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg" />
-    <meta property="og:description" content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
-    <meta name="theme-color" content="#00a2ff">
-    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Sass/main.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Music Page</title>
+<meta property="og:title" content="Omorian Clifford's Portfolio" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.omorianclifford.com/pages/MusicPage" />
+<meta property="og:image" src="/Images/portfolio_selfie.jpg" />
+<meta property="og:description"
+    content="The portfolio website of Omorian Clifford, a Game Development student and music producer/sound designer" />
+<meta name="theme-color" content="#00a2ff">
+<meta name="twitter:card" src="/Images/portfolio_selfie.jpg">
+
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/Sass/main.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<title>Music Page</title>
 </head>
 
 <body>
@@ -63,15 +64,15 @@
         </div>
 
         <div class="SfinxInternshipTracks">
-            <iframe class="SGST" 
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1564467463%3Fsecret_token%3Ds-6UkMSG8oT0P&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe class="SGST"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1564467463%3Fsecret_token%3Ds-6UkMSG8oT0P&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
 
         <div class="SpiritFox">
             <iframe class="SFST"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1440776236&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1440776236&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
-        
+
         <a class="MPHeader">Music Production</a>
 
         <div class="TrackOne">
