updated carousel a bit

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="homeContainer">
             <div class="introContainer">
                 <img class="selfie"
-                     src="https://cdn.discordapp.com/attachments/411221053633855519/981186729568518144/20220531_135919.jpg"
+                     src="Images/portfolio_selfie.jpg"
                      alt="Picture of me">
                 <div class="introTextContainer">
                     <h1 class="container introHeader">Hello, my name is Omorian</h1>
@@ -65,19 +65,14 @@
             <div class="container projectsContainer">
                 <h1>Programming Projects</h1>
                 <div class="progProjects">
-                    <div class="projectCarousel">
-                        <a class="prog project1" href="https://shreddexz.itch.io/time-to-die">
-                            <img src="https://cdn.discordapp.com/attachments/973888571339575347/992532642014707762/TTD_Img2.png"
-                                 alt="Cover art for the game 'Time to die'"> 
-                            <span class="itemDesc TTD_T"> 
-                                <p>
-                                An endless shooter with audio visualization
-                                </p>
-                                <p class="material-icons">
-                                arrow_outward
-                                </p>
-                            </span>
-                        </a>
+                        <figure class="carousel">
+                            <a class="prog project1" href="https://shreddexz.itch.io/time-to-die" target="_blank">
+                                <img src="Images/TTD_Img2.png"/>
+                                <figcaption> An endless shooter with audio visualization
+                                    <i class="material-icons">arrow_outward</i>
+                                </figcaption>
+                            </a>
+                        </figure>
                         <div class="carousel-actions">
                             <button id="carousel-button-prev" aria-label="Previous"><</button>
                             <button id="carousel-button-next" aria-label="Next">></button>
@@ -87,7 +82,6 @@
                             <input class="dot" type="radio" name="dot" />
                             <input class="dot" type="radio" name="dot" />
                         </div>
-                    </div> 
                 </div>
             </div>
         </div>
