--- a/pages/AboutMePage.html
+++ b/pages/AboutMePage.html
@@ -58,9 +58,8 @@
                 <a>Hello, my name is Omorian</a>
             </div>
             <div class="aboutmetext">
-                <a>I am a Game Development student from the Netherlands, I am currently studying at Noorderpoort in
-                    Groningen.<br>
-                    I have been making games in Unity since 2019, and I have recently started working in Unreal,
+                <a>I am a game developer and sound designer/music producer from the Netherlands.<br>
+                    I have been making games in Unity since 2019, and I have also started working in Unreal,
                     using blueprints to create the functionality.
                     <br>
                     <br>
