Update to homepage

--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
         <div class="homeContainer">
             <div class="container introContainer hidden">
                 <div class="proxBar"></div>
-                <img class="selfie"
-                    src="Images/portfolio_selfie.jpg"
-                    alt="Picture of me">
                 <div class="introTextContainer">
                     <h1 class="container introHeader">Hello, my name is Omorian</h1>
                     <h3 class="introSubHeader">I am a game developer from the Netherlands <br>with a passion for programming and sound design/music production.</h3>
+
+                </div>
+                <div class="contentWrapper">
+                    <img class="selfie"
+                        src="Images/portfolio_selfie.jpg"
+                        alt="Picture of me">
+                <div class="buttonWrapper">
                     <a class="button aboutMeButton" href="/pages/AboutMePage.html">
                         <span class="abmt">Learn more about me</span>
                         <i class="material-icons">
@@ -75,6 +79,7 @@
                             keyboard_double_arrow_down
                         </i>
                     </a>
+                </div>
                 </div>
             </div>
 
@@ -106,7 +111,7 @@
                         <a class="" href="https://jusawichan.itch.io/i-remember-this" target="_blank">
                             <img src="Images/irt.png"/>
                             <figcaption>You wake up in a crashed car, and have to figure out
-                        what happened [GGJ 2021]
+                                what happened [GGJ 2021]
                                 <i class="material-icons">arrow_outward</i>
                             </figcaption>
                         </a>
@@ -117,8 +122,8 @@
                         <a class="" href="https://shreddexz.itch.io/the-last-scientist" target="_blank">
                             <img src="Images/tls.png"/>
                             <figcaption>
-                    You wake up in a dark room, and you have no idea what happened.
-                    <br> You are alone and have to figure it out by yourself.
+                                You wake up in a dark room, and you have no idea what happened.
+                                <br> You are alone and have to figure it out by yourself.
                                 <i class="material-icons">arrow_outward</i>
                             </figcaption>
                         </a>
@@ -141,7 +146,7 @@
                     <div class="track spiritFox">
                         <iframe class="song" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1440776236&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
-                    
+
                     <div class="track internship">
                         <iframe class="song" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1564467463%3Fsecret_token%3Ds-6UkMSG8oT0P&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                     </div>
